--- a/sass/abstracts/variables.scss
+++ b/sass/abstracts/variables.scss
@@ -12,7 +12,7 @@
     --font-weight--bold     : 700;
 
     // Font Spacing
-    --font-spacing: -4px;
+    --font-spacing: -2px;
 
     // Descriptive Base Colors
     --white       : #FFFFFF;
