--- a/sass/components/timer.scss
+++ b/sass/components/timer.scss
@@ -18,7 +18,7 @@
         align-self: flex-end;
     }
     &__colon {
-        padding: 0 rem(5px);
+        margin: 0 rem(5px);
     }
 }
 
